--- a/about_video.html
+++ b/about_video.html
@@ -87,11 +87,11 @@
 	<!-- The Story -->
 	<article id="start" class="caption-single container">
         <div class="row">
-		    <div class="col-12 col-lg-3">
-			    <h4 class="title title--overhead js-lines">The story</h4>
+		    <div style="background-color: #000;" class="col-12 col-lg-3 reveal">
+			    <h4 style="color: #fff;" class="title title--overhead js-lines">The story</h4>
 			</div>
 			<div class="col-12 col-lg-9">
-				<h2 class="title title--h4 js-lines"> We firmly believe that, the right leader can be the like the metaphorical glue, that could make the entire capital stick to the firm!.</h2>
+				<h2 class="title title--h4 js-lines reveal"> We firmly believe that, the right leader can be the like the metaphorical glue, that could make the entire capital stick to the firm!</h2>
 				<div class="description noGutters-Bottom js-block">
 				    <p class="paragraph noGutters-Bottom">In a world of seemingly saturated competition across industries, there is novelty brimming in every corner of the world, every single day. New talent is on the hunt, and newer talent is on the rise. We, at Peer Growth, believe that the need for the right talent to match with the right culture is an underestimated yet one of the most requisite pillars for global success, for any organisation. </p>
 			    </div>
@@ -103,28 +103,27 @@
 	<!-- WeDo -->
 	<article class="caption-single container">
         <div class="row">
-		    <div class="col-12 col-lg-3">
-			    <h4 class="title title--overhead js-lines">What we do?</h4>
+		    <div style="background-color: #000;" class="col-12 col-lg-3 reveal">
+			    <h4 style="color:#fff;" class="title title--overhead js-lines">What we do?</h4>
 			</div>
 			<div class="col-12 col-lg-9">
-				<h2 class="title title--h4 js-lines"> It always lies in the search. The destination would else be a thing of imagination!</h2>
+				<h2 class="title title--h4 js-lines reveal"> It always lies in the search. The destination would else be a thing of imagination!</h2>
 				<div class="description js-block">
-				    <p class="paragraph">Peer Growth is a trusted management consulting firm, with Search and Advisory Solutions as its key solutions. We constantly engage with leading organisations to ensure that their human capital teams, get their right fit. While the world may forget that human comes before capital, we are here to remind that and humanise this process, and transform it into a long standing relationship.</p>
+				    <p class="paragraph relationship">Peer Growth is a trusted management consulting firm, with Search and Advisory Solutions as its key solutions. We constantly engage with leading organisations to ensure that their human capital teams, get their right fit. While the world may forget that human comes before capital, we are here to remind that and humanise this process, and transform it into a long standing relationship.</p>
 			    </div>
 			</div>
-			<div class="col-12 col-md-6 col-lg-4 offset-lg-3 ">
+			<div style="padding-top:30px;" class="col-12 col-md-6 col-lg-4 offset-lg-3 ">
 				<h4 class="title title--h6 title--subtitle">Why us?</h4>
-				<ul class="list-unstyled">
+				<ul class=" reveal">
                     <li>Value Driven</li>
                     <li>Global Research</li>
                     <li>Post-Closure Engagement</li>
                     <li>Research Oriented</li>
-                    <li>Customized Approach</li>
 				</ul>
 			</div>
-			<div class="col-12 col-md-6 col-lg-5">
+			<div style="padding-top:30px;" class="col-12 col-md-6 col-lg-5">
 				<h4 class="title title--h6 title--subtitle">Our services</h4>
-				<ul class="list-unstyled">
+				<ul class=" reveal">
                     <li>Executive Research</li>
                     <li>Board Consulting</li>
                     <li>Peergrowth Research Chronicle</li>
@@ -150,7 +149,7 @@
 	<div class="container container-no-gutters mb--2">
 		<div class="row">
 			<!-- itemCard -->
-			<div  class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard">
+			<div  class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard reveal">
 			<p style="background-color:#000; padding:20px 30px 30px 30px;color:#fff;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quas quis temporibus laboriosam cum nesciunt eaque at. Eos, quaerat, laboriosam? Sapiente quaerat, ipsam nemo alias tempore ipsum commodi dolorum mollitia.</p>	
 			</div>
 			<!-- /itemCard -->
@@ -177,7 +176,7 @@
 			</div>
 			<!-- /itemCard -->
 			<!-- itemCard -->
-			<div class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard">
+			<div class="col-12 col-sm-6 col-lg-4 col-xl-3 itemCard reveal">
 				<p style="background-color:#000; padding:20px 30px 30px 30px;color:#fff;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores exercitationem, libero, nobis id velit assumenda magnam numquam repellendus hic soluta maxime nulla accusantium alias est qui harum asperiores distinctio eos.</p>
 			</div>
 			<!-- itemCard -->
