--- a/contact.html
+++ b/contact.html
@@ -152,19 +152,22 @@
     <!-- /Contact -->
 
 	<!-- Menu -->
+	<!-- Menu -->
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="whatwedo.html"><span>what we do</span></a></li>
-			    <li><a class="menu-list__item" href="about_video.html"><span>about</span></a></li>
-			    <li><a class="menu-list__item" href="speak.html"><span>others speak</span></a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>Contact</span></a></li>
+                <li><a class="menu-list__item" href="about_video.html"><span>Our story</span></a>
+                </li>
+			    <li><a class="menu-list__item" href="whatwedo.html"><span>Our expertise</span></a></li>
+			    <li><a class="menu-list__item" href="speak.html"><span>Clients speaking</span></a></li>
+			    <li><a class="menu-list__item" href="contact.html"><span>Lets interact</span></a></li>
 			</ul>
+
 		</div>
 		<div class="social social--white">
-		  <a class="social__link" href="#">FB</a>
-		  <a class="social__link" href="#">TW</a>
-		  <a class="social__link" href="#">IG</a>
+		  <a class="social__link" href="#">We understand</a>
+		  <a class="social__link" href="#">We interpret</a>
+		  <a class="social__link" href="#">We execute</a>
 		</div>
 	</div>
 	<div class="ef-background"></div>
