--- a/traininganddevelop.html
+++ b/traininganddevelop.html
@@ -113,7 +113,7 @@
 			    <div class="col-12 col-lg-9">
 			        <h2 class="title title--h4 js-lines">Improvement begins with I</h2>
 				    <div class="description js-block">
-				        <p>We acknowledge the several gaps that exist in today’s world, that rise primarily due to insufficiency in training. However with the appropriate evaluation, with customised solutions, we bring in unparalleled modules that cater to every firm’s training and development needs. Our process not only involves creation of content and its delivery, but also post-delivery workshops for feedback & candidate assessments</p>
+				        <p>We acknowledge the several gaps that exist in today’s world, that rise primarily due to insufficiency in training. However with the appropriate evaluation, with customised solutions, we bring in unparalleled modules that cater to every firm’s training and development needs. Our process not only involves creation of content and its delivery, but also post-delivery workshops for feedback & candidate assessments.</p>
 			        </div>
 			    </div>
 		    </div>
