--- a/peergrowthresearchchronicle.html
+++ b/peergrowthresearchchronicle.html
@@ -111,7 +111,7 @@
             <div class="row">
 		        <div class="col-12 col-lg-2"><span class="num-article">01 —</span></div>
 			    <div class="col-12 col-lg-9">
-			        <h2 class="title title--h4 js-lines"> Creating new benchmarks, reaching them and upping the bar every single time is our motto - because our clients love dedication, and we, our clients</h2>
+			        <h2 class="title title--h4 js-lines">Creating new benchmarks, reaching them and upping the bar every single time is our motto - because our clients love dedication, and we, our clients.</h2>
 				    <div class="description js-block">
 				        <p> When we say research, we mean searching every nook and corner. From Business Analysis reports that give insights into market competition and providing bespoke solutions.</p>
 			        </div>
