--- a/speak.html
+++ b/speak.html
@@ -88,7 +88,7 @@
 		<article id="start" class="caption-single container">
             <div class="row">
 		        <div class="col-12 col-lg-4">
-			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light">01.</span>  A multi billion dollar Healthcare group</h4>
+			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light reveal">01.</span>  A multi billion dollar Healthcare group</h4>
 			    </div>
 			    <div class="col-12 col-lg-8">
 				    <div class="description js-block">
@@ -111,7 +111,7 @@
 		<article class="caption-single container">
             <div class="row">
 		        <div class="col-12 col-lg-4">
-			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light">02.</span>  A reputed Aviation group.</h4>
+			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light reveal">02.</span>  A reputed Aviation group.</h4>
 			    </div>
 			    <div class="col-12 col-lg-8">
 				    <div class="description js-block">
@@ -137,7 +137,7 @@
 		<article class="caption-single container">
             <div class="row">
 		        <div class="col-12 col-lg-4">
-			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light">03.</span> A massive family conglomerate</h4>
+			        <h4 class="title title--h4 js-lines"><span class="num-article num-article--light reveal">03.</span> A massive family conglomerate</h4>
 			    </div>
 			    <div class="col-12 col-lg-8">
 				    <div class="description js-block">
@@ -152,21 +152,18 @@
 		<div class="caption-single container">
 		    <div class="row">
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">AWWWARDS</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Closure Rate</h4>
+			        <div class="js-lines"> 97%-98%</div>
 		        </div>
 		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">CSSDesignAwards</h4>
-			        <div class="js-lines">Site of the Day — Dec 2017</div>
+		            <h4 class="title title--h6 js-lines">Huge array of partners</h4>
+			        <div class="js-lines">Exceeding 25+</div>
 		        </div>
 			</div>
 		</div>
 		
 		<!-- Page nav -->
-		    <nav class="page-nav">
-			    <a class="btn-link" href="#"><i class="circle circle--left icon-left-open"></i>Prev project</a>
-				<a class="btn-link" href="#">Next project<i class="circle circle--right icon-right-open"></i></a>
-			</nav>
+		 
 		<!-- /Page nav -->
 	</section>
     <!-- /Intro -->
