--- a/speak.html
+++ b/speak.html
@@ -70,7 +70,7 @@
 	    <!-- Intro -->
 	<header class="header-page header-fullscreen overlay">
 		<div class="wrap-bg">    
-			<div class="js-image jarallax" data-image="assets/img/fullscreen_slider_image_03.jpg"></div>
+			<div class="js-image jarallax" data-image="assets/images/bannerspeak.jpg"></div>
 		</div>
 		<div class="header-page__container-fluid align-items-end js-opacity">
 			<div class="row no-gutters">
@@ -101,10 +101,10 @@
 		<!-- Image -->
 		<figure class="image-container gallery-two reveal">
 			<div class="gallery-two__item">
-			    <img class="cover" src="assets/img/image_project_22.jpg" alt="" />
-				<div class="text-overlay text-overlay--left-bottom">minimal</div>
+			    <img class="cover" src="assets/images/family.jpg" alt="" />
+				<div class="text-overlay text-overlay--left-bottom">Appreciation</div>
 			</div>
-			<div class="gallery-two__item"><img class="cover" src="assets/img/image_project_19.jpg" alt="" /></div>
+			<div class="gallery-two__item"><img class="cover" src="assets/images/aviation.jpg" alt="" /></div>
 		</figure>
 		<!-- /Image -->
 		
@@ -124,11 +124,11 @@
 		<!-- Image -->
 		<figure class="image-container container gallery-two">
 			<div class="gallery-two__item gallery-two__item--irregular reveal">
-			    <span class="note">Have no fear of perfection</span>
-				<img class="cover" src="assets/img/image_04.jpg" alt="" />
+			   
+				<img class="cover" src="assets/images/multibillion-02.jpg" alt="" />
 			</div>
             <div class="gallery-two__item gallery-two__item--irregular-right reveal">
-			   <img class="cover" src="assets/img/image_project_01.jpg" alt="" />
+			   <img class="cover" src="assets/images/multibillion-01.jpg" alt="" />
 			   <div class="text-overlay text-overlay--left-bottom">br</div>
 			</div>
 		</figure>
@@ -148,20 +148,7 @@
 		</article>
 		
 		
-		
-		<div class="caption-single container">
-		    <div class="row">
-		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">Closure Rate</h4>
-			        <div class="js-lines"> 97%-98%</div>
-		        </div>
-		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">Huge array of partners</h4>
-			        <div class="js-lines">Exceeding 25+</div>
-		        </div>
-			</div>
-		</div>
-		
+	
 		<!-- Page nav -->
 		 
 		<!-- /Page nav -->
