--- a/whatwedo.html
+++ b/whatwedo.html
@@ -54,7 +54,7 @@
 	<nav class="navbar">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/peerlogobl.png" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogowh.png" alt="ARTEM.">
 				<img class="logotype logotype__back" src="assets/images/peerlogowh.png" alt="ARTEM.">
 			</a>
         </div>
@@ -69,7 +69,7 @@
     <!-- News -->
 	<div class="container">
 		<header class="header-page">
-            <h1 class="title title--h1 js-lines-l">What we do</h1>
+            <h1 class="title title--h1 js-lines-l">Our Expertise</h1>
 			<!-- <div class="select js-down">
 			    <span class="placeholder">Select category</span>
 			    <ul class="filters">
@@ -88,7 +88,7 @@
 		    <!-- Project -->
 		    <figure class="item-project item-masonry js-block category-design">
 			    <a href="executive.html" class="onHover">
-				    <img class="item-news__image" src="assets/images/Executive search.jpeg" alt="Project">
+				    <img class="item-news__image" src="assets/images/exec-search-thumpnail.jpg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">We are not in it for white board discussion only, we want to make an impact</div>
 					    <h3 class="title title--h5">Executive Search</h3>
@@ -100,7 +100,7 @@
 		    <!-- Project -->
 		    <figure class="item-project item-masonry js-block category-branding">
 			    <a href="boardconsulting.html" class="onHover">
-				    <img class="item-news__image" src="assets/images/Board consulting.jpeg" alt="Project">
+				    <img class="item-news__image" src="assets/images/board-consulting-thumpnail.jpg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">We aim to enthuse your board with those who bring with them a plethora of ideas</div>
 					    <h3 class="title title--h5">Board Consulting</h3>
@@ -112,7 +112,7 @@
 		    <!-- Post -->
 		    <figure class="item-project item-masonry js-block category-app">
 			    <a href="peergrowthresearchchronicle.html" class="onHover">
-				    <img class="item-news__image" src="assets/images/Peergrowth research chronicle.jpeg" alt="Project">
+				    <img class="item-news__image" src="assets/images/research-chronicle-thumpnail.jpg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">We look for creating benchmarks so that our clients value us as much as we value them</div>
 					    <h3 class="title title--h5">Peergrowth Research Chronicle</h3>
@@ -124,7 +124,7 @@
 		    <!-- Post -->
 		    <figure class="item-project item-masonry js-block category-design">
 			    <a href="traininganddevelop.html" class="onHover">
-				    <img class="item-news__image" src="assets/images/Training and development.jpeg" alt="Project">
+				    <img class="item-news__image" src="assets/images/training-&-dev-thumpnail.jpg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">Bespoke training solutions with an unparalleled focus is one of our core strenghts </div>
 					    <h3 class="title title--h5">Training and Development</h3>
