--- a/about_video.html
+++ b/about_video.html
@@ -54,7 +54,7 @@
 	<nav class="navbar navbar--white">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/peerlogobl.png" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogowh.png" alt="ARTEM.">
 				<img class="logotype logotype__back" src="assets/images/peerlogowh.png" alt="ARTEM.">
 			</a>
         </div>
@@ -69,7 +69,7 @@
     <!-- Intro -->
 	<header class="header-page header-fullscreen overlay">
 		<div class="wrap-bg">    
-			<div class="js-image jarallax" data-image="assets/img/fullscreen_slider_image_03.jpg"></div>
+			<div class="js-image jarallax" data-image="assets/images/ourstory.jpg"></div>
 		</div>
 		<div class="header-page__container-fluid align-items-end js-opacity">
 			<div class="row no-gutters">
@@ -87,8 +87,8 @@
 	<!-- The Story -->
 	<article id="start" class="caption-single container">
         <div class="row">
-		    <div style="background-color: #000;" class="col-12 col-lg-3 reveal">
-			    <h4 style="color: #fff;" class="title title--overhead js-lines">The story</h4>
+		    <div style="background-color: #fff;" class="col-12 col-lg-3 reveal">
+			    <h4 style="color: #000;" class="title title--overhead js-lines">The story</h4>
 			</div>
 			<div class="col-12 col-lg-9">
 				<h2 class="title title--h4 js-lines reveal"> We firmly believe that, the right leader can be the like the metaphorical glue, that could make the entire capital stick to the firm!</h2>
@@ -103,8 +103,8 @@
 	<!-- WeDo -->
 	<article class="caption-single container">
         <div class="row">
-		    <div style="background-color: #000;" class="col-12 col-lg-3 reveal">
-			    <h4 style="color:#fff;" class="title title--overhead js-lines">What we do?</h4>
+		    <div style="background-color: #fff;" class="col-12 col-lg-3 reveal">
+			    <h4 style="color:#000;" class="title title--overhead js-lines">What we do?</h4>
 			</div>
 			<div class="col-12 col-lg-9">
 				<h2 class="title title--h4 js-lines reveal"> It always lies in the search. The destination would else be a thing of imagination!</h2>
@@ -183,40 +183,9 @@
 		</div>
 	</div>
     <!-- /Team -->
+
     <!-- Slider -->
-    <div class="row">
-    <div class="col-lg-8">
-		<div class="slider slider-simply"> 		
-		    <div class="slider-article swiper-container">
-                <div class="swiper-wrapper">
-			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/08_open_menu.jpg"></div>
-					</div>
-			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/9_news.jpg"></div>
-					</div>
-			        <div class="swiper-slide">
-						<div class="cover-slider" data-bg="assets/img/06_about_us.jpg"></div>
-					</div>
-		        </div>
-			</div>
-			<div class="control-slider control-slider--bottom swiper-control">
-                <div class="swiper-button-next swiper-button-next--square zoom-cursor">
-                    <i class="icon-up-open"></i>
-				</div>
-				<div class="swiper-button-prev swiper-button-prev--square zoom-cursor">
-                    <i class="icon-down-open"></i>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div style="padding-top:120px;" class="container col-lg-4">
-		
-				<p style="text-align:center;">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, quidem?</p>
-		
-	</div>
-</div>
-	<!-- /Slider -->
+  
 
     <!-- Awards -->
 	
