--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
 		    <ul class="menu-list">
                 <li><a class="menu-list__item" href="about_video.html"><span>Our story</span></a>
                 </li>
-			    <li><a class="menu-list__item" href="whatwedo.html"><span>Our expertise</span></a></li>
+			    <li><a class="menu-list__item gold" href="whatwedo.html"><span>Our expertise</span></a></li>
 			    <li><a class="menu-list__item" href="speak.html"><span>Clients speaking</span></a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>Lets interact</span></a></li>
+			    <li><a class="menu-list__item gold" href="contact.html"><span>Lets interact</span></a></li>
 			</ul>
 
 		</div>
