--- a/about_video.html
+++ b/about_video.html
@@ -67,7 +67,7 @@
 	<!-- /Top -->
 
     <!-- Intro -->
-	<header class="header-page header-fullscreen overlay">
+	<header class="header-page header-fullscreen reveal">
 		<div class="wrap-bg">    
 			<div class="js-image jarallax" data-image="assets/images/ourstory.jpg"></div>
 		</div>
@@ -236,9 +236,9 @@
 		    <ul class="menu-list">
                 <li><a class="menu-list__item" href="about_video.html"><span>Our story</span></a>
                 </li>
-			    <li><a class="menu-list__item" href="whatwedo.html"><span>Our expertise</span></a></li>
+			    <li><a class="menu-list__item gold" href="whatwedo.html"><span>Our expertise</span></a></li>
 			    <li><a class="menu-list__item" href="speak.html"><span>Clients speaking</span></a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span>Lets interact</span></a></li>
+			    <li><a class="menu-list__item gold" href="contact.html"><span>Lets interact</span></a></li>
 			</ul>
 
 		</div>
