--- a/peergrowthresearchchronicle.html
+++ b/peergrowthresearchchronicle.html
@@ -200,11 +200,11 @@
 	<div class="menu">
         <div class="menu-inner">
 		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span>Our story</span></a>
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> story</a>
                 </li>
-			    <li><a class="menu-list__item gold" href="whatwedo.html"><span>Our expertise</span></a></li>
-			    <li><a class="menu-list__item" href="speak.html"><span>Clients speaking</span></a></li>
-			    <li><a class="menu-list__item gold" href="contact.html"><span>Lets interact</span></a></li>
+			    <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#f7541b;">Our</span> expertise</a></li>
+			    <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;" >Clients</span> speaking</a></li>
+			    <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> interact</a></li>
 			</ul>
 
 		</div>
@@ -215,7 +215,6 @@
 		</div>
 	</div>
 	<div class="ef-background"></div>
-
 	<!-- Demo Menu -->
 	
     <div class="btnSlideNav slideClose"></div>
