--- a/about_video.html
+++ b/about_video.html
@@ -60,7 +60,20 @@
     </nav>
     <!-- /Top -->
     <!-- Intro -->
-    <header class="header-page header-fullscreen reveal">
+    <header class="header-page header-fullscreen header-page--gutterBottom overlay overlay--45 js-image jarallax" data-image="assets/images/ourstory.jpg">
+		<div class="header-page__container-fluid align-items-end js-opacity">
+			<div class="row no-gutters">
+				<div class="col-md-12 col-lg-6">
+					<div class="tail header-page__description">"Every good conversation starts with listening"<br>-Tom Haak.</div>
+				</div>
+				<div class="col-md-12 col-lg-6 text-lg-right">
+					<a class="btn-link btn-link--circle-right" href="!#start">THE STORY<i class="circle circle--white circle--right icon-down-open"></i></a>
+				</div>
+			</div>
+		</div>
+	</header>
+    <!-- /Intro -->
+  <!--   <header class="header-page header-fullscreen reveal">
         <div class="wrap-bg">
             <div class="js-image jarallax" data-image="assets/images/ourstory.jpg"></div>
         </div>
@@ -74,12 +87,12 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header> -->
     <!-- /Intro -->
     <!-- The Story -->
     <article id="start" class="caption-single container">
         <div class="row">
-            <div style="background-color: #fff;" class="col-12 col-lg-3 reveal">
+            <div class="col-12 col-lg-3 reveal">
                 <h4 style="color: #000;" class="title title--overhead js-lines">The story</h4>
             </div>
             <div class="col-12 col-lg-9">
@@ -94,7 +107,7 @@
     <!-- WeDo -->
     <article class="caption-single container">
         <div class="row">
-            <div style="background-color: #fff;" class="col-12 col-lg-3 reveal">
+            <div class="col-12 col-lg-3 reveal">
                 <h4 style="color:#000;" class="title title--overhead js-lines">What we do?</h4>
             </div>
             <div class="col-12 col-lg-9">
@@ -251,11 +264,11 @@
     <div class="menu">
         <div class="menu-inner">
             <ul class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> story</a>
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> Story</a>
                 </li>
-                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#f7541b;">Our</span> expertise</a></li>
-                <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;">Clients</span> speaking</a></li>
-                <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> interact</a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span>Expertise</a></li>
+                <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;">Clients</span> Speaking</a></li>
+                <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> Interact</a></li>
             </ul>
         </div>
         <div class="social social--white">
