--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			        <div class="swiper-slide">
 					    <div class="slider__item reveal">
 						    <h6 class="title title--overhead"><span class="down-up"><span>Executive Search&nbsp;<img style="width:50px;height:50px;" src="assets/images/Globalreach.png"></span></span></h6>
-			                <h1 class="title title--display-1 js-text-wave">We are everywhere
+			                <h1 class="title title--display-1 js-text-wave">Global Presence
 			                </h1>
 							
 				            <p class="description"><span class="down-up"><span>Our global reach brings a pool of talent - an eclectic cohort of highly skilled, professional, talented and dependable individuals, from across the globe that can be the fresh breath of change an organisation is looking for!</span></span></p>
@@ -161,24 +161,23 @@
     <!-- /Hero -->
 
 	<!-- Menu -->
-	<div class="menu">
+	 <div class="menu">
         <div class="menu-inner">
-		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> story</a>
+            <ul class="menu-list">
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> Story</a>
                 </li>
-			    <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#f7541b;">Our</span> expertise</a></li>
-			    <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;" >Clients</span> speaking</a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> interact</a></li>
-			</ul>
-
-		</div>
-		<div class="social social--white">
-		  <a class="social__link" href="#">We understand</a>
-		  <a class="social__link" href="#">We interpret</a>
-		  <a class="social__link" href="#">We execute</a>
-		</div>
-	</div>
-	<div class="ef-background"></div>
+                <li><a class="menu-list__item" href="whatwedo.html"><span>Expertise</a></li>
+                <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;">Clients</span> Speaking</a></li>
+                <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> Interact</a></li>
+            </ul>
+        </div>
+        <div class="social social--white">
+            <a class="social__link" href="#">We understand</a>
+            <a class="social__link" href="#">We interpret</a>
+            <a class="social__link" href="#">We execute</a>
+        </div>
+    </div>
+    <div class="ef-background"></div>
     <!-- /Menu -->
 
 	<!-- Demo Menu -->
