--- a/peergrowthresearchchronicle.html
+++ b/peergrowthresearchchronicle.html
@@ -197,24 +197,23 @@
     <!-- /Intro -->
 
 	<!-- Menu -->
-	<div class="menu">
+	 <div class="menu">
         <div class="menu-inner">
-		    <ul class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> story</a>
+            <ul class="menu-list">
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> Story</a>
                 </li>
-			    <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#f7541b;">Our</span> expertise</a></li>
-			    <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;" >Clients</span> speaking</a></li>
-			    <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> interact</a></li>
-			</ul>
-
-		</div>
-		<div class="social social--white">
-		  <a class="social__link" href="#">We understand</a>
-		  <a class="social__link" href="#">We interpret</a>
-		  <a class="social__link" href="#">We execute</a>
-		</div>
-	</div>
-	<div class="ef-background"></div>
+                <li><a class="menu-list__item" href="whatwedo.html"><span>Expertise</a></li>
+                <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;">Clients</span> Speaking</a></li>
+                <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> Interact</a></li>
+            </ul>
+        </div>
+        <div class="social social--white">
+            <a class="social__link" href="#">We understand</a>
+            <a class="social__link" href="#">We interpret</a>
+            <a class="social__link" href="#">We execute</a>
+        </div>
+    </div>
+    <div class="ef-background"></div>
 	<!-- Demo Menu -->
 	
     <div class="btnSlideNav slideClose"></div>
