--- a/about_video.html
+++ b/about_video.html
@@ -61,19 +61,19 @@
     <!-- /Top -->
     <!-- Intro -->
     <header class="header-page header-fullscreen header-page--gutterBottom overlay overlay--45 js-image jarallax" data-image="assets/images/ourstory.jpg">
-		<div class="header-page__container-fluid align-items-end js-opacity">
-			<div class="row no-gutters">
-				<div class="col-md-12 col-lg-6">
-					<div class="tail header-page__description">"Every good conversation starts with listening"<br>-Tom Haak.</div>
-				</div>
-				<div class="col-md-12 col-lg-6 text-lg-right">
-					<a class="btn-link btn-link--circle-right" href="!#start">THE STORY<i class="circle circle--white circle--right icon-down-open"></i></a>
-				</div>
-			</div>
-		</div>
-	</header>
+        <div class="header-page__container-fluid align-items-end js-opacity">
+            <div class="row no-gutters">
+                <div class="col-md-12 col-lg-6">
+                    <div class="tail header-page__description">"Every good conversation starts with listening"<br>-Tom Haak.</div>
+                </div>
+                <div class="col-md-12 col-lg-6 text-lg-right">
+                    <a class="btn-link btn-link--circle-right" href="!#start">THE STORY<i class="circle circle--white circle--right icon-down-open"></i></a>
+                </div>
+            </div>
+        </div>
+    </header>
     <!-- /Intro -->
-  <!--   <header class="header-page header-fullscreen reveal">
+    <!--   <header class="header-page header-fullscreen reveal">
         <div class="wrap-bg">
             <div class="js-image jarallax" data-image="assets/images/ourstory.jpg"></div>
         </div>
@@ -187,33 +187,45 @@
     <!-- /Team -->
     <!-- Slider -->
     <div class="container-no-gutters">
-    	<div class="row">
-        <div style="paddirg-right:10px;" class="col-lg-8">
-            <div class="slider slider-simply ">
-                <div class="slider-article swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="cover-slider" data-bg="assets/images/training1.jpg"></div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="cover-slider" data-bg="assets/images/training2.jpg"></div>
+        <div class="row">
+            <div style="paddirg-right:10px;" class="col-lg-8">
+                <div class="slider slider-simply reveal ">
+                    <div class="slider-article swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="cover-slider" data-bg="assets/images/ach1.jpg"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="cover-slider" data-bg="assets/images/ach2.jpg"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="cover-slider" data-bg="assets/images/ach3.jpg"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="cover-slider" data-bg="assets/images/ach4.jpg"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="cover-slider" data-bg="assets/images/ach5.jpg"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="cover-slider" data-bg="assets/images/ach6.jpg"></div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="control-slider control-slider--bottom swiper-control">
-                    <div class="swiper-button-next swiper-button-next--square zoom-cursor">
-                        <i class="icon-up-open"></i>
-                    </div>
-                    <div class="swiper-button-prev swiper-button-prev--square zoom-cursor">
-                        <i class="icon-down-open"></i>
+                    <div class="control-slider control-slider--bottom swiper-control">
+                        <div class="swiper-button-next swiper-button-next--square zoom-cursor">
+                            <i class="icon-up-open"></i>
+                        </div>
+                        <div class="swiper-button-prev swiper-button-prev--square zoom-cursor">
+                            <i class="icon-down-open"></i>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div style="display:flex; align-items:center;" class="col-lg-4">
+                <h1 class="reveal" style="font-size:60px;">&nbsp;&nbsp;&nbsp;&nbsp;&emsp;Our<br> Achievements</h1>
+            </div>
         </div>
-        <div class="col-lg-4">
-        	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, corporis.</p>
-        </div>
-        </div>	
     </div>
     <!-- Awards -->
     <!-- Footer -->
