styles and services

--- a/contact.html
+++ b/contact.html
@@ -144,11 +144,11 @@
 	 <div class="menu">
         <div class="menu-inner">
             <ul class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> Story</a>
-                </li>
-                <li><a class="menu-list__item" href="whatwedo.html"><span>Expertise</a></li>
-                <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;">Clients</span> Speaking</a></li>
-                <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> Interact</a></li>
+                <li><a class="menu-list__item" href="about_video.html"><span>Who we are?</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span>What we do?</span></a></li>
+                <li><a class="menu-list__item" href="#"><span>How we work?</span></a></li>
+                <li><a class="menu-list__item" href="speak.html"><span>Why Choose us?</span></a></li>
+                <li><a class="menu-list__item" href="contact.html"><span>Lets Interact</span></a></li>
             </ul>
         </div>
         <div class="social social--white">
