--- a/peergrowthresearchchronicle.html
+++ b/peergrowthresearchchronicle.html
@@ -138,7 +138,7 @@
 		</article>
 		
 		<!-- Slider -->
-		<div class="slider slider-simply image-container--half reveal">
+		<div class="slider slider-simply image-container--gutters">
 		    <div class="slider-article swiper-container">
                 <div class="swiper-wrapper">
 			        <div class="swiper-slide">
@@ -170,6 +170,16 @@
 				        <p>Compensation Benchmarking reports where the client learns where they stand in the race of compensation mechanisms, to Diversity and Employment Engagement Studies where deeper insights into a comparison with the competition comes into play.</p>
 			        </div>
 			    </div>
+			     <div class="row">
+                            <div class="col-lg-6">
+                                <h4 class="title title--h6 js-lines">Closure Rate</h4>
+                                <div class="js-lines"> 97%-98%</div>
+                            </div>
+                            <div class="col-lg-6">
+                                <h4 class="title title--h6 js-lines">Huge array of partners</h4>
+                                <div class="js-lines">Exceeding 25+</div>
+                            </div>
+                        </div>
 		    </div>
 		</article>
 		
@@ -177,18 +187,7 @@
 	
 		<!-- /Image -->
 		
-		<div class="caption-single container">
-		    <div class="row">
-		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">Closure Rate</h4>
-			        <div class="js-lines"> 97%-98%</div>
-		        </div>
-		        <div class="col-12 col-md-6 award-item">
-		            <h4 class="title title--h6 js-lines">Huge array of partners</h4>
-			        <div class="js-lines">Exceeding 25+</div>
-		        </div>
-			</div>
-		</div>
+		
 		
 		<!-- Page nav -->
 		  
@@ -200,11 +199,11 @@
 	 <div class="menu">
         <div class="menu-inner">
             <ul class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span style="color:#f7541b;">Our</span> Story</a>
-                </li>
-                <li><a class="menu-list__item" href="whatwedo.html"><span>Expertise</a></li>
-                <li><a class="menu-list__item" href="speak.html"><span style="color:#f7541b;">Clients</span> Speaking</a></li>
-                <li><a class="menu-list__item" href="contact.html"><span style="color:#f7541b;">Lets </span> Interact</a></li>
+                <li><a class="menu-list__item" href="about_video.html"><span>Who we are?</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span>What we do?</span></a></li>
+                <li><a class="menu-list__item" href="#"><span>How we work?</span></a></li>
+                <li><a class="menu-list__item" href="speak.html"><span>Why Choose us?</span></a></li>
+                <li><a class="menu-list__item" href="contact.html"><span>Lets Interact</span></a></li>
             </ul>
         </div>
         <div class="social social--white">
