slider and menu

--- a/about_video.html
+++ b/about_video.html
@@ -87,7 +87,7 @@
     <!-- Preloader -->
     <div class="preloader">
         <div class="preloader__wrap">
-            <img class="preloader__logo" src="assets/images/peerlogowh.png" alt="ARTEM">
+            <img class="preloader__logo" src="assets/images/peerlogo.png" alt="ARTEM">
             <div class="preloader__progress"><span></span></div>
         </div>
     </div>
@@ -95,8 +95,8 @@
     <nav class="navbar navbar--white">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/peerlogowh.png" alt="ARTEM.">
-                <img class="logotype logotype__back" src="assets/images/peerlogowh.png" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
+                <img class="logotype logotype__back" src="assets/images/peerlogo.png" alt="ARTEM.">
             </a>
         </div>
         <div class="ml-sm-auto">
@@ -107,7 +107,7 @@
     </nav>
     <!-- /Top -->
     <!-- Intro -->
-    <header class="header-page header-fullscreen header-page--gutterBottom overlay overlay--45 js-image jarallax" data-image="assets/images/ourstory.jpg">
+   <header class="header-page header-fullscreen header-page--gutterBottom overlay overlay--80 jarallaxVideo" data-jarallax-video="mp4:assets/video/about.mp4">
         <div class="header-page__container-fluid align-items-end js-opacity">
             <div class="row no-gutters">
                 <div class="col-md-12 col-lg-6">
@@ -170,11 +170,11 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="assets/images/discount.svg" alt="Avatar" style="width:100%;height:100px;padding:10px;">
+                            <img src="assets/icons/executivesearch_PGC.svg" alt="Avatar" style="width:100%;height:100px;padding:10px;">
                             <h2>Executive <br>Search</h2>
                         </div>
                         <div class="flip-card-back">
-                            <img style="width:100%;height:200px;" src="assets/images/peerlogowh.png">
+                            <img style="width:70%;height:100px;margin-top:50px" src="assets/images/peerlogo.png">
                         </div>
                     </div>
                 </div>
@@ -183,11 +183,11 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="assets/images/discount.svg" alt="Avatar"style="width:100%;height:100px;padding:10px;">
+                            <img src="assets/icons/boardconsulting_PGC.svg" alt="Avatar"style="width:100%;height:100px;padding:10px;">
                             <h2>Board <br>Consulting</h2>
                         </div>
                         <div class="flip-card-back">
-                            <img style="width:100%;height:200px;" src="assets/images/peerlogowh.png">
+                            <img style="width:70%;height:100px;margin-top:50px" src="assets/images/peerlogo.png">
                         </div>
                     </div>
                 </div>
@@ -200,11 +200,11 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="assets/images/discount.svg" alt="Avatar" style="width:100%;height:100px;padding:10px;">
+                            <img src="assets/icons/researchoriented_PGC.svg" alt="Avatar" style="width:100%;height:100px;padding:10px;">
                             <h2>Peergrowth Research<br>Chronicle</h2>
                         </div>
                         <div class="flip-card-back">
-                            <img style="width:100%;height:200px;" src="assets/images/peerlogowh.png">
+                            <img style="width:70%;height:100px;margin-top:50px" src="assets/images/peerlogo.png">
                         </div>
                     </div>
                 </div>
@@ -213,11 +213,11 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="assets/images/discount.svg" alt="Avatar" style="width:100%;height:100px;padding:10px;">
+                            <img src="assets/icons/traininganddevelopment_PGC.svg" alt="Avatar" style="width:100%;height:100px;padding:10px;">
                             <h2>Training and Development</h2>
                         </div>
                         <div class="flip-card-back">
-                           <img style="width:100%;height:200px;" src="assets/images/peerlogowh.png">
+                           <img style="width:70%;height:100px;margin-top:50px" src="assets/images/peerlogo.png">
                         </div>
                     </div>
                 </div>
@@ -369,20 +369,21 @@
         </div>
     </footer>
     <!-- /Footer -->
-    <div class="menu">
+   <div class="menu">
         <div class="menu-inner">
-            <ul class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span>Who we are?</span></a></li>
-                <li><a class="menu-list__item" href="whatwedo.html"><span>What we do?</span></a></li>
-                <li><a class="menu-list__item" href="#"><span>How we work?</span></a></li>
-                <li><a class="menu-list__item" href="speak.html"><span>Why Choose us?</span></a></li>
-                <li><a class="menu-list__item" href="contact.html"><span>Lets Interact</span></a></li>
+            <ul style="text-align:center;" class="menu-list">
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">W</span>ho we are?</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">W</span>hat we do?</span></a></li>
+                <li><a class="menu-list__item" href="#"><span style="color:#1b254f">H</span>ow we work?</span></a></li>
+                <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">W</span>hy Choose us?</span></a></li>
+                <li><a class="menu-list__item" href="contact.html"><span  style="color:#1b254f">L</span>ets Interact</span></a></li>
+                
             </ul>
         </div>
-        <div class="social social--white">
-            <a class="social__link" href="#">We understand</a>
-            <a class="social__link" href="#">We interpret</a>
-            <a class="social__link" href="#">We execute</a>
+        <div class="social">
+            <p class="social__link" href="#">We understand</p>
+            <p class="social__link" href="#">We interpret</p>
+            <p class="social__link" href="#">We execute</p>
         </div>
     </div>
     <div class="ef-background"></div>
