--- a/whatwedo.html
+++ b/whatwedo.html
@@ -45,7 +45,7 @@
     <!-- Preloader -->
     <div class="preloader">
 	    <div class="preloader__wrap">
-	        <img class="preloader__logo" src="assets/images/peerlogowh.png" alt="ARTEM">
+	        <img class="preloader__logo" src="assets/images/peerlogo.png" alt="ARTEM">
 		    <div class="preloader__progress"><span></span></div>
 		</div>
 	</div>
@@ -54,8 +54,8 @@
 	<nav class="navbar">
         <div class="mr-auto logo-container">
             <a class="logo-link" href="index.html">
-                <img class="logotype logotype__front" src="assets/images/peerlogowh.png" alt="ARTEM.">
-				<img class="logotype logotype__back" src="assets/images/peerlogowh.png" alt="ARTEM.">
+                <img class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
+				<img class="logotype logotype__back" src="assets/images/peerlogo.png" alt="ARTEM.">
 			</a>
         </div>
 		<div class="ml-sm-auto">
@@ -179,20 +179,21 @@
 	<!-- /Footer -->
 	
 	<!-- Menu -->
-	 <div class="menu">
+	<div class="menu">
         <div class="menu-inner">
-            <ul class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span>Who we are?</span></a></li>
-                <li><a class="menu-list__item" href="whatwedo.html"><span>What we do?</span></a></li>
-                <li><a class="menu-list__item" href="#"><span>How we work?</span></a></li>
-                <li><a class="menu-list__item" href="speak.html"><span>Why Choose us?</span></a></li>
-                <li><a class="menu-list__item" href="contact.html"><span>Lets Interact</span></a></li>
+            <ul style="text-align:center;" class="menu-list">
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">W</span>ho we are?</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">W</span>hat we do?</span></a></li>
+                <li><a class="menu-list__item" href="#"><span style="color:#1b254f">H</span>ow we work?</span></a></li>
+                <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">W</span>hy Choose us?</span></a></li>
+                <li><a class="menu-list__item" href="contact.html"><span  style="color:#1b254f">L</span>ets Interact</span></a></li>
+                
             </ul>
         </div>
-        <div class="social social--white">
-            <a class="social__link" href="#">We understand</a>
-            <a class="social__link" href="#">We interpret</a>
-            <a class="social__link" href="#">We execute</a>
+        <div class="social">
+            <p class="social__link" href="#">We understand</p>
+            <p class="social__link" href="#">We interpret</p>
+            <p class="social__link" href="#">We execute</p>
         </div>
     </div>
     <div class="ef-background"></div>
