--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			        <div class="swiper-slide ">
 					    <div class="slider__item reveal">
 		                    <h6 class="title title--overhead"><span class="down-up"><span>Trusted management consulting firm, within search and advisory.&nbsp; <img style="width:50px;height:50px;" src="assets/images/Valuedriven.png"></span></span></h6>
-			                <h1 class="title title--display-1 js-text-wave">Values drive</h1>
+			                <h1 class="title title--display-1 js-text-wave">Values driven</h1>
 				            
 				             <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Lets Interact</button></span></span></a>
 						</div>
