--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   			
 		}
 		body {
-               background-image:url("../images/pattern.png"); 
+               background-image:url(../assets/images/pattern.jpg); 
                background-repeat: repeat;   
                }                                   
   
